--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -12,7 +12,7 @@
 	}
 	p {
 		font-size: 36px;
-		font-family: 'Futura Medium';
+		font-family: 'FuturaPT-Medium';
 	}
 }
 
@@ -49,7 +49,7 @@
 }
 
 #about {
-	margin-top: 90px;
+	margin-top: 3px;
 	.mod-font-1{
 		font-size: 36px;
 		font-weight: 500;
@@ -81,10 +81,11 @@
 			font-weight: 500;
 		}
 		.text-mod-2,.text-mod-3 {
+			padding-left: 15px;
 			font-family: 'LucidaHandwritingItalic';
 		}
 		.text-mod-3 {
-			padding-left: 155px;
+			padding-left: 170px;
 		}
 	}
 
