--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -5,7 +5,7 @@
 	justify-content:center;
 	h1 {
 		padding-top: 100px;
-		font-size: 90px;
+		font-size: 89px;
 		font-family: 'LucidaHandwritingItalic';
 		position: relative;
 		right: 9px;
@@ -18,7 +18,7 @@
 
 .main-girl {
 	width:636px;
-	position: relative;;
+	position: relative;
 }
 .mod_upper {
 	position: relative;
@@ -58,7 +58,7 @@
 	.mod-font-2 {
 		font-size: 20px;
 		margin-bottom: 25px;
-		font-family: 'FUtura-Medium';
+		font-family: 'FuturaPT-Medium';
 	}
 	.text-description{
 		font-size: 27px;
@@ -93,7 +93,7 @@
 		background: url("../img/3.png") no-repeat center 280px;
 		background-size:100%;
 		border: 4px solid #b9a368;
-		font-family: 'Futura Medium';
+		font-family: 'FuturaPT-Medium';
 		p:first-child {
 			font-size: 20px;
 			color:#b9a368;
@@ -153,7 +153,7 @@
 		font-weight: 500;
 		font-size: 36px;
 		margin:65px 0 15px 0;
-		font-family: 'Futura Medium';
+		font-family: 'FuturaPT-Medium';
 	}
 }
 #instagram {
@@ -162,7 +162,7 @@
 		color: #b9a368;
 		font-weight: 500;
 		font-size: 36px;
-		font-family: 'Futura Medium';
+		font-family: 'FuturaPT-Medium';
 	}
 	.follow_inst-btn {
 		color: white;
@@ -170,7 +170,7 @@
 		border-radius: 7px;
 		padding: 5px 15px;
 		font-size: 20px;
-		font-family: 'Futura Medium';
+		font-family: 'FuturaPT-Medium';
 		text-decoration: none;
 	}
 	.lightwidget-block {
@@ -216,6 +216,7 @@
 		top: -25px;
 	}
 	#about {
+		margin-top: 50px;
 		.text-description {
 			font-size: 22px;
 			line-height: 26px;
@@ -229,11 +230,11 @@
 		}
 	}
 	#education {
-		margin-top: 65px;
+		margin-top: 75px;
 		.text-block-1 {
-			margin: 0 0 65px 0;
+			margin: 0 0 75px 0;
 			.text-mod-3 {
-				padding-left: 116px;
+				padding-left: 122px;
 			}
 		}
 		.education-block p:first-child {
@@ -243,7 +244,7 @@
 			background-position: center 185px;
 		}
 		.text-mod-1 {
-			font-family: 'Futura Medium';
+			font-family: 'FuturaPT-Medium';
 			font-size: 29px;
 			margin-bottom: 0;
 		}
@@ -270,4 +271,11 @@
 			font-size: 29px;
 		}
 	}
+.lower {
+	img {
+		&:last-child {
+			padding-right: 30px;
+		}
+	}
+}
 }
