--- a/sass/_basic_params.scss
+++ b/sass/_basic_params.scss
@@ -2,6 +2,7 @@
 // @font-face{font-family: 'FuturaPT-Medium'; src:url('../fonts/FuturaPT-Medium.ttf');}
 // @font-face{font-family: 'FuturaPT-Book'; src:url('../fonts/FuturaPT-Book.ttf');}
 @font-face{font-family: 'FuturaPT-Medium'; src:url('../fonts/FuturaPT-Medium.ttf');}
+@font-face{font-family: 'FuturaPT-Light'; src:url('../fonts/FuturaPT-Light.ttf');}
 @font-face{font-family: 'FuturaPT-Book'; src:url('../fonts/FuturaPT-Book2.ttf');}
 @font-face{font-family: 'LucidaHandwritingItalic'; src:url('../fonts/LucidaHandwritingItalic.ttf');}
 @font-face{font-family: 'FuturaPT-Demi'; src:url('../fonts/FuturaPT-Demi.ttf');}
