--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,10 @@
   src: url("../fonts/FuturaPT-Medium.ttf"); }
 
 @font-face {
+  font-family: 'FuturaPT-Light';
+  src: url("../fonts/FuturaPT-Light.ttf"); }
+
+@font-face {
   font-family: 'FuturaPT-Book';
   src: url("../fonts/FuturaPT-Book2.ttf"); }
 
@@ -189,7 +193,7 @@ footer {
     font-family: 'FuturaPT-Medium'; }
   #about .text-description {
     font-size: 27px;
-    font-family: 'FuturaPT-Book';
+    font-family: 'FuturaPT-Light';
     line-height: 31px; }
 
 #education {
