--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -62,7 +62,7 @@
 	}
 	.text-description{
 		font-size: 27px;
-		font-family: 'FuturaPT-Book';
+		    font-family: 'FuturaPT-Light';
 		line-height: 31px;
 	}
 }
