--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,6 +1,16 @@
 #navigation,#navigation-addon {
 	font-family: 'FuturaPT-Medium';
 	margin-top: 25px;
+	&.navigation-portfolio {
+		position:inherit;
+		top:inherit;
+		ul {
+			flex-direction: row;
+	}
+	.visible-items {
+		position: absolute;
+	}
+}
 	a {
 		font-size: 20px;
 		color:black;
@@ -41,6 +51,11 @@
 	}
 }
 #navigation-addon {
+	&.portfolio-menu{
+		a {
+			color:black;
+		}
+	}
 	ul {
 		justify-content: flex-end;
 	}
@@ -59,13 +74,10 @@
 	}
 	ul {
 		justify-content: space-around;	
+		&.visible-items {
+			background-color: white;
+		}
 	}
-}
-
-
-// Extra small devices (portrait phones, less than 576px)
-@media (max-width: 575px) { 
-
 }
 
 // Small devices (landscape phones, less than 768px)
@@ -73,11 +85,6 @@
 	.row {
 		flex-wrap:inherit;
 	}
-}
-
-// Medium devices (tablets, less than 992px)
-@media (max-width: 991px) { 
-
 }
 
 // Large devices (desktops, less than 1200px)
@@ -96,4 +103,14 @@
 			bottom:2px;
 		}
 	}
+#navigation-addon {
+	&.portfolio-menu{
+		a {
+			color:black;
+		}
+		ul {
+			justify-content: center;
+		}
+	}
+}
 }
