--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -6,11 +6,11 @@
 		top:inherit;
 		ul {
 			flex-direction: row;
+		}
+		.visible-items {
+			position: absolute;
+		}
 	}
-	.visible-items {
-		position: absolute;
-	}
-}
 	a {
 		font-size: 20px;
 		color:black;
@@ -24,7 +24,9 @@
 		}
 		.visible-items{
 			display: inherit !important;
-			position: absolute;
+			position:absolute;
+			// left:0;
+			// width: 100vw;
 		}
 		li {
 			a {
@@ -103,14 +105,14 @@
 			bottom:2px;
 		}
 	}
-#navigation-addon {
-	&.portfolio-menu{
-		a {
-			color:black;
-		}
-		ul {
-			justify-content: center;
+	#navigation-addon {
+		&.portfolio-menu{
+			a {
+				color:black;
+			}
+			ul {
+				justify-content: center;
+			}
 		}
 	}
-}
 }
