--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,4 +2,6 @@
 @import '_header.scss';
 @import '_footer.scss';
 @import '_index.scss';
-@import '_portfolio.scss'
+@import '_portfolio.scss';
+@import '_modal.scss';
+@import '_education.scss';
